--- a/src/main/resources/assets/avaritiatweaks/lang/en_US.lang
+++ b/src/main/resources/assets/avaritiatweaks/lang/en_US.lang
@@ -7,10 +7,10 @@ key.infinity_armor.noclip=Toggle No Clip Mode
 key.infinity_armor.noclip.disabled=Toggle No Clip Mode (Disabled in config!)
 
 #Items
-item.avaritiatweaks.enhancement_crystal.name=Enhancement Crystal
+item.avaritiatweaks:enhancement_crystal.name=Enhancement Crystal
 
 #Blocks
-tile.avaritiatweaks.gaia_block.name=Gaia Block
+tile.avaritiatweaks:gaia_block.name=Gaia Block
 
 #Tooltips
 tooltips.avaritiatweaks.enhancement_crystal=Infinity isn't even enough.
@@ -27,7 +27,7 @@ desc.avaritiatweaks.neutron_collector=The Neutron Collector collects a Pile of N
 desc.avaritiatweaks.enhancement_crystal=This crystal can be crafted with Infinity Armor / Tools to give them special capabilities, like Enchantments, Potion Effects, etc.
 
 #Botania Integration
-tile.avaritiatweaks.infinitato.name=Infinitato
+tile.avaritiatweaks:infinitato.name=Infinitato
 tile.botania.flower.asgardandelion.lore=Watered with Vazkii's tears :c
 tile.botania.flower.soarleander.lore=Just hook it up to my veeeeins!
 tile.botania:flower.asgardandelion.name=Asgardandelion
